# playing_cards

./: .gitignore  playcar.pyz  poetry.toml  pyproject.toml
.github/workflows/: main.yml  python-publish.yml  python-publish2.yml  python-publish3.yml
playing_cards/: main.py
tests/: test_playing_cards.py
