[tool.poetry]
name = "playing_cards"
version = "0.1.4"
description = ""
authors = ["uyg <ooy004003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
playing_cards =  'playing_cards.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
